More work on core extensions

--- a/org.eclipse.m2e.core/src/org/eclipse/m2e/core/internal/messages.properties
+++ b/org.eclipse.m2e.core/src/org/eclipse/m2e/core/internal/messages.properties
@@ -49,6 +49,7 @@ MavenImpl_error_lookup=Could not lookup required component
 MavenImpl_error_missing=Missing {0}
 MavenImpl_error_mojo=Could not get configured mojo for {0}
 MavenImpl_error_no_exec_req=Could not create maven execution request
+MavenImpl_error_core_extensions=Could not lookup or execute core extensions
 MavenImpl_error_param=Could not get mojo execution parameter value
 MavenImpl_error_param_for_execution=Could not get the value for parameter {0} for plugin execution {1}
 MavenImpl_error_read_config=Could not read Maven configuration
